# HideMe-

./: README.md  pyproject.toml  requirements.txt  run.py
data/: presets.json
src/smart_privacy_cam/: config.py  main.py
src/smart_privacy_cam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/smart_privacy_cam/core/: __init__.py  background_processor.py  camera_manager.py  face_processor.py  pipeline.py  virtual_output.py
src/smart_privacy_cam/ui/: __init__.py  app.py
